tests/snapshots/integration__integration_tests__help__help_merge_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - merge
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt merge - Merge worktree into target branch

Squash & rebase, fast-forward target, remove the worktree.

Usage: [1m[36mwt merge[0m [36m[OPTIONS][0m [36m[TARGET]

[1m[32mArguments:
  [36m[TARGET]
          Target branch
          
          Defaults to default branch.

[1m[32mOptions:
      [1m[36m--no-squash
          Skip commit squashing

      [1m[36m--no-commit
          Skip commit and squash

      [1m[36m--no-rebase
          Skip rebase (fail if not already rebased)

      [1m[36m--no-remove
          Keep worktree after merge

      [1m[36m--no-verify
          Skip hooks

  [1m[36m-y[0m, [1m[36m--yes
          Skip approval prompts

      [1m[36m--stage[0m[36m [0m[36m<STAGE>
          What to stage before committing [default: all]

          Possible values:
          - [1m[36mall[0m:     Stage everything: untracked files + unstaged tracked changes
          - [1m[36mtracked[0m: Stage tracked changes only (like [1mgit add -u[0m)
          - [1m[36mnone[0m:    Stage nothing, commit only what's already in the index

  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Run from a feature worktree to merge into the default branch — like clicking "Merge pull request" on GitHub.

[32mExamples

Merge to the default branch:

  [2mwt merge

Merge to a different branch:

  [2mwt merge develop

Keep the worktree after merging:

  [2mwt merge --no-remove

Preserve commit history (no squash):

  [2mwt merge --no-squash

Skip committing/squashing (rebase still runs unless --no-rebase):

  [2mwt merge --no-commit

[32mPipeline

[2mwt merge[0m runs these steps:

1. [1mSquash[0m — Stages uncommitted changes, then combines all commits since target into one (like GitHub's "Squash and merge"). Use [2m--stage[0m to
control what gets staged: [2mall[0m (default), [2mtracked[0m, or [2mnone[0m. A backup ref is saved to [2mrefs/wt-backup/<branch>[0m. With [2m--no-squash[0m, uncommitted
changes become a separate commit and individual commits are preserved.
2. [1mRebase[0m — Rebases onto target if behind. Skipped if already up-to-date. Conflicts abort immediately.
3. [1mPre-merge hooks[0m — Project commands run after rebase, before merge. Failures abort. See wt hook.
4. [1mMerge[0m — Fast-forward merge to the target branch. Non-fast-forward merges are rejected.
5. [1mPre-remove hooks[0m — Project commands run before removing worktree. Failures abort.
6. [1mCleanup[0m — Removes the worktree and branch. Use [2m--no-remove[0m to keep the worktree. When already on the target branch or in the main worktree,
the worktree is preserved.
7. [1mPost-merge hooks[0m — Project commands run after cleanup. Failures are logged but don't abort.

Use [2m--no-commit[0m to skip committing uncommitted changes and squashing; rebase still runs by default and can rewrite commits unless [2m--no-rebase[0m is
passed. Useful after preparing commits manually with [2mwt step[0m. Requires a clean working tree.

[32mLocal CI

For personal projects, pre-merge hooks open up the possibility of a workflow with much faster iteration — an order of magnitude more small changes
instead of fewer large ones.

Historically, ensuring tests ran before merging was difficult to enforce locally. Remote CI was valuable for the process as much as the checks: it
guaranteed validation happened. [2mwt merge[0m brings that guarantee local.

The full workflow: start an agent (one of many) on a task, work elsewhere, return when it's ready. Review the diff, run [2mwt merge[0m, move on. Pre-merge
hooks validate before merging — if they pass, the branch goes to the default branch and the worktree cleans up.

  [2m[pre-merge]
  [2mtest = "cargo test"
  [2mlint = "cargo clippy"

[32mSee also

- wt step — Run individual operations (commit, squash, rebase, push)
- wt remove — Remove worktrees without merging
- wt switch — Navigate to other worktrees
